--- a/jonah-grier-hacker-news-clone/package.json
+++ b/jonah-grier-hacker-news-clone/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
+    "cookie-parser": "^1.4.5",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
