--- a/jonah-grier-hacker-news-clone/signupbackend/.env
+++ b/jonah-grier-hacker-news-clone/signupbackend/.env
@@ -1,3 +1,3 @@
 DATABASE_ACCESS = "mongodb+srv://admin-user:password2020@hacker-news-cluster.fwdkl.mongodb.net/userTable?retryWrites=true&w=majority"
 PORT = "4000"
-SUPER_SECRET="my_secret_json_web_token_access_123454321"
+SECRET="my_secret_123454321"
