--- a/jonah-grier-hacker-news-clone/package.json
+++ b/jonah-grier-hacker-news-clone/package.json
@@ -21,14 +21,16 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve": "^11.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "devstart": "concurrently \"node ./signupbackend/server.js\" \"react-scripts start\"",
-    "start": "node ./server.js",
+    "devstart": "concurrently \"nodemon ./signupbackend/server.js\" \"react-scripts start\"",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
