--- a/jonah-grier-hacker-news-clone/.env
+++ b/jonah-grier-hacker-news-clone/.env
@@ -1,3 +1,4 @@
 DATABASE_ACCESS = "mongodb+srv://admin-user:password2020@hacker-news-cluster.fwdkl.mongodb.net/userTable?retryWrites=true&w=majority"
 PORT = "8080"
+BACKEND_PORT = "4000"
 SECRET="my_secret_123454321"
