--- a/jonah-grier-hacker-news-clone/package.json
+++ b/jonah-grier-hacker-news-clone/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.6.0",
     "concurrently": "^6.0.2",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
@@ -28,14 +29,14 @@
   },
   "scripts": {
     "devstart": "concurrently \"nodemon ./signupbackend/server.js\" \"react-scripts start\"",
-    "start": "serve -s build",
+    "start": "node ./server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm run build"
   },
-
   "proxy": "http://localhost:4000",
+  "homepage": "/",
   "eslintConfig": {
     "extends": [
       "react-app",
